[project]
name = "everything-is-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "playwright>=1.58.0",
    "pymupdf>=1.27.2.2",
    "pytest>=8.0.0",
    "requests>=2.33.1",
    "scrapling[all]>=0.4.5",
    "yt-dlp>=2024.1.0",
]
